I have uploaded and added a favicon and have this working on all pages. I have also added on a new document a footer that works a bit better although there are issues with this, being space around and above is too much, and the icons dont align central when viewed on a mobile device. I will take a look into this tomorrow.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -214,25 +214,15 @@
 .submit-heading { 
     font-family: Montserrat, sans-serif;
     color: #2a5490;
-    margin-top: 140px;
-    margin-left: 61px;
-   
+    padding-top: 140px;
+    padding-left: 46px;
 }
 
 p.donate {
     font-family: Montserrat, sans-serif;
-    margin-top: 10px;
-    margin-left: 61px;
-    margin-right: 200px;
-}
-
-
-.we-transfer {
-    color: #2a5490;
-}
-
-.we-transfer:hover  {
-    color: #df6530;
+    padding-top: 10px;
+    padding-left: 46px;
+    /*padding-right: 200px;*/
 }
 
 
@@ -267,14 +257,13 @@ p.donate {
     background-size: cover;
     background-position: center;
     height: 900px;
-
 }
 
 .upload-form {
     font-family: Montserrat, sans-serif;
     padding-top: 0;
     background-color: rgba(255, 255, 255, 0.555);
-    max-width: 500px;
+    max-width: 600px;
     position: absolute;
     left: 45px;
     padding: 30px;
@@ -284,7 +273,7 @@ p.donate {
 .text-input {
     width: 100%;
     height: 25px;
-    margin: 5px 0 20px 0;
+    padding: 5px 0 20px 0;
     border: 0.5px solid #000000;   
 }
 
@@ -310,6 +299,11 @@ p.donate {
     padding-top: 10px;
 }
 
+.btn-success:active {
+  background-color: #df6530 !important;
+  border-color: #df6530 !important;
+}
+
 
 
 /* ------------------------------------------- Contact Text */
@@ -318,14 +312,14 @@ p.donate {
     font-family: Montserrat, sans-serif;
     color: #2a5490;
     padding-top: 140px;
-    padding-left: 61px; 
+    padding-left: 83px; 
 }
 
 p.contact {
     font-family: Montserrat, sans-serif;
     padding-top: 10px;
-    padding-left: 61px;
-    padding-right: 100px;
+    padding-left: 83px;
+  
     padding-bottom: 20px;
 }
 
@@ -410,6 +404,104 @@ element.style:hover {
 .footer {
     background-color: #2a5490;
     position: absolute;
+    max-width: 100%;
+    min-width: 100%;
+}
+
+
+.row {
+    margin-left: 0;
+    margin-right: 0;
+}
+
+
+
+.col-4 {
+    min-width: 100%;
+}
+
+
+.list-inline-item {
+    padding-right: 10px;
+}
+
+.sponsored-by  {
+    font-family: Montserrat, sans-serif;
+    font-size: 14.5px;
+    color: #fff;
+    padding-top: 20px;
+    padding-right: 10px;
+    margin-left: 0;
+}
+
+.sponsors {
+    padding-left: 18px;
+}
+
+
+.follow-us {
+    font-family: Montserrat, sans-serif;
+    font-size: 14.5px;
+    color: #fff;
+    padding-top: 20px;
+    padding-right: 10px;
+    padding-left: 10px;
+    text-align: center;
+}
+
+.social-media {
+    font-size: 20px;
+    padding-right: 16px;
+    text-align: center;
+}
+
+.social-media a{
+    color: #fff;
+}
+
+.social-media a:hover{
+    color: #c7d7f0;
+}
+
+
+
+.supporting-p {
+    font-family: Montserrat, sans-serif;
+    font-size: 14.5px;
+    color: #fff;
+    padding-top: 20px;
+    padding-right: 10px;
+    padding-left: 10px;
+    text-align: right;
+}
+
+.supporting-logos {
+    padding-top: 0;
+    padding-right: 10px;
+    padding-left: 90px;
+    float: right;
+    position: relative;
+}
+
+
+
+
+
+
+
+
+
+
+/* ------------------------------------------- Footer */
+
+
+
+
+/*
+
+.footer {
+    background-color: #2a5490;
+    position: absolute;
     padding-top: 10px;
     max-width: 100%;
     min-width: 100%;
@@ -418,6 +510,10 @@ element.style:hover {
 .row {
     margin-left: 0;
     margin-right: 0;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
 }
 
 
@@ -456,6 +552,18 @@ element.style:hover {
     padding-right: 10px;
     padding-left: 90px;
 }
+
+*/
+
+
+
+
+
+
+
+
+
+
 
 
 
